--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -21,7 +21,7 @@
                 <p><br></p>
                 <a href="/signup/"><button>New User ?</button></a>
                 <p><br></p>
-                <a href="/forgotpassword/"><button>Forgot Password ?"</button></a>
+                <a href="/verifypass/"><button>Forgot Password ?"</button></a>
                 <p><br></p>
         </div>
         <br>
