--- a/home/templates/viewposts.html
+++ b/home/templates/viewposts.html
@@ -32,7 +32,7 @@
         </script>
         <h1>Your Posts !</h1><br>
         {% for i in post %}
-        <div style="border: thick solid black; padding: 5px; margin-left: 200px; margin-right: 200px;">
+        <div class="container border-1" style="margin-left:auto;margin-right:auto;">
             <img height="500px" width="500px" style="max-width: 100%; height: auto;" class="imag-thumbnail img-responsive" src="{{ i.Image.url }}">
             <h4>{{ i.caption }}</h4>
             {% load mytags %}
