--- a/home/templates/addpost.html
+++ b/home/templates/addpost.html
@@ -8,13 +8,15 @@
     </head>
     <body>
         {% block bodyhere %}
-        <h1>Add Post !</h1><br>
-        <form method = "post" action="/addingimage/" enctype="multipart/form-data"> {% csrf_token %}
-            <h4>Add your Picture here</h4><br>
-            <input type="file" name="image"><br><br>
-            <h4>Caption</h4><textarea name="capt" rows="10" cols="30" required></textarea><br>
-            <button type="submit">Upload</button> 
-        </form> 
+        <div class="blurry mx-auto">
+            <h1>Add Post !</h1><br>
+            <form method = "post" action="/addingimage/" enctype="multipart/form-data"> {% csrf_token %}
+                <h4>Add your Picture here</h4><br>
+                <input type="file" name="image"><br><br>
+                <h4>Caption</h4><textarea name="capt" rows="10" cols="30" required></textarea><br>
+                <button type="submit">Upload</button> 
+            </form> 
+        </div>
         {%endblock%}
     </body>
 </html>
