--- a/home/templates/viewposts.html
+++ b/home/templates/viewposts.html
@@ -30,23 +30,28 @@
               })
           }
         </script>
+        <div class="container" style="overflow: scroll;">
         <h1>Your Posts !</h1><br>
         {% for i in post %}
-        <div class="container border-1" style="margin-left:auto;margin-right:auto;">
-            <img height="500px" width="500px" style="max-width: 100%; height: auto;" class="imag-thumbnail img-responsive" src="{{ i.Image.url }}">
-            <h4>{{ i.caption }}</h4>
+        <div class="card myborder">
+          {%csrf_token%}
+          <h3 class="card-title"><a onclick="pro({{ i.id }})" href="#profileModal" data-toggle="modal" id="profile">{{i.Username}}</a></h3>
+          <p class="card-subtitle" style="color: rgb(98, 174, 181);">{{i.time}}</p>
+          <img class="card-img" style="max-width:100%; max-height: 50rem;" class="imag-thumbnail img-responsive" src="{{ i.Image.url }}">
+          <h3 style="color: rgb(189, 209, 223);">{{ i.caption }}</h3>            <h4>{{ i.caption }}</h4>
             {% load mytags %}
             <div style="width: 100%;">
                 <a onclick="showLikes({{i.id}})" href="#LikesModal" data-toggle="modal" id="totalL{{i.id}}" style="padding-right: 50px;">View Likes( {% totalLikes i.id %} )</a>
                 <a onclick="showComments({{i.id}})" href="#CommentsModal" data-toggle="modal" id="totalC{{i.id}}">View Comments( {% totalComments i.id %} )</a><br>
                 <form style="display:inline-block; padding: 10px; margin-right: 30px;" action="/editpost/" method="POST">{% csrf_token %}
-                    <button value="{{ i.id }}" name="pid">Edit Post</button>
+                    <button class="btn btn-info" value="{{ i.id }}" name="pid">Edit Post</button>
                 </form>
                 {% csrf_token %}
-                  <button onclick="deletepost({{i.id}})" id="del" data-toggle="modal" data-target="#deleteModal">Delete Post</button>
+                  <button class="btn btn-info" onclick="deletepost({{i.id}})" id="del" data-toggle="modal" data-target="#deleteModal">Delete Post</button>
            </div>
         </div><br>
         {% endfor %}
+        </div>
         <div class="modal fade" id="LikesModal" role="dialog">
             <div class="modal-dialog">
               <div class="modal-content">
