--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -7,11 +7,11 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
 	<body>
-	<h1>Hello New User !</h1>
 	<div>
 		{% block bodyhere %}
-		<h2>Please enter the details</h2><br>
-			<div style="margin-left: 500px; margin-right: 620px;">
+			<div class="blurry mx-auto">
+				<h1>Hello New User !</h1>
+			<h2>Please enter the details</h2><br>
             <form style="text-align: left;" action="/registering/" method="post">{% csrf_token %}
 				<label>First Name : </label><input style="float: right;" type="text" placeholder="First Name" name="fname" required>
 				<p><br></p>
